# Event-Management-System

./: .gitignore  CHANGELOG  CLEANUP_SUMMARY.md  LICENSE  PROJECT_STRUCTURE.md  README.md  README.rst  SETUP_GUIDE.md  pyproject.toml  requirements.txt  test_images.py  test_setup.py  test_toga.py
backend/: README.md  requirements.txt
backend/api/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/event_manager/: settings.py  urls.py
backend/eventmanager/: urls.py  wsgi.py
backend/eventmanager/core/: apps.py
backend/eventmanager/events/: admin.py  apps.py  models.py  serializers.py  views.py
backend/eventmanager/settings/: __init__.py  base.py  development.py  production.py
backend/eventmanager/users/: apps.py
docs/: CHAPTER FIVE.docx  CHAPTER FOUR.docx  CHAPTER ONE.docx  CHAPTER THREE.docx  CHAPTER TWO.docx  PRELIMINARY PAGE.docx  README.md  TABLE OF CONTENT.docx  ~$APTER FOUR.docx  ~$APTER ONE.docx  ~$APTER THREE.docx  ~$APTER TWO.docx  ~$umni_database_management_system.docx  ~WRL1784.tmp
docs/api/: README.md
docs/development/: README.md
docs/user-guide/: README.md
frontend/: App.js  BACKEND_INTEGRATION.md  README.md  config.js  main.py  mockData.js  package-lock.json  package.json  pyproject.toml  requirements-frontend.txt  requirements.txt
frontend/kv/: events.kv  get_started.kv  home.kv  login.kv  main.kv  notification.kv  signup.kv
frontend/screens/: CreateEventScreen.js  EditProfileScreen.js  EventDetailsScreen.js  EventListScreen.js  FeedbackScreen.js  GetStarted.js  HomeScreen.js  LoginScreen.js  NotificationScreen.js  ProfileScreen.js  SettingsScreen.js  SignUp.js  TaskListScreen.js  TaskManagementScreen.js  create_event_screen.py  event_detail_screen.py  event_list_screen.py  get_started_screen.py  home_screen.py  login_screen.py  notification_screen.py  profile_screen.py  signup_screen.py  task_list_screen.py  task_management_screen.py
frontend/services/: NotificationService.js  README.md  README_NOTIFICATIONS.md  apiService.js  authService.js  toastService.js
frontend/src/Event_Manager/: __init__.py  __main__.py  app.py
frontend/src/Event_Manager/models/: __init__.py  event.py
frontend/src/Event_Manager/resources/: IMAGE_GUIDE.md
frontend/src/Event_Manager/resources/icons/: README.md
frontend/src/Event_Manager/resources/images/: README.md
frontend/src/Event_Manager/services/: __init__.py  api_client.py
frontend/src/Event_Manager/utils/: __init__.py  constants.py  image_manager.py
frontend/src/Event_Manager/views/: __init__.py
frontend/src/event_manager/: __init__.py  __main__.py  app.py
frontend/src/event_manager.dist-info/: METADATA
frontend/src/event_manager/assets/: __init__.py
frontend/src/event_manager/models/: __init__.py
frontend/src/event_manager/screens/: getstarted_screen.py  home_screen.py  login_screen.py  sign_up_screeen.py
frontend/src/event_manager/services/: api_client.py
frontend/tests/: __init__.py  test_app.py  test_ui.py
frontend/utils/: api_client.py  assets.py
mobile_app/: README.md
mobile_app/src/event_manager/: app.py
mobile_app/src/event_manager/screens/: create_event_screen.py  event_detail_screen.py  home_screen.py  profile_screen.py
scripts/: setup-dev.sh
src/Event_Manager/: __main__.py  app.py
