# Event Manager - Professional Event Management System
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-manager"
version = "0.1.0"
description = "A comprehensive event management system with desktop GUI and REST API"
authors = [
    {name = "Dev Kelz", email = "kelz.codes@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["event", "management", "gui", "api", "django", "toga"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]

[project.urls]
Homepage = "https://github.com/Dev-Kelz/Event-Manager"
Repository = "https://github.com/Dev-Kelz/Event-Manager"
Documentation = "https://github.com/Dev-Kelz/Event-Manager/tree/main/docs"
"Bug Tracker" = "https://github.com/Dev-Kelz/Event-Manager/issues"

# Tool configurations for the entire project
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["frontend/tests", "backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Optional: Briefcase configuration for building distributable apps
# Uncomment and configure if you want to build standalone executables
# [tool.briefcase]
# project_name = "Event Manager"
# bundle = "com.devkelz"
# version = "0.1.0"
# url = "https://github.com/Dev-Kelz/Event-Manager"
# license.file = "LICENSE"
# author = "Dev Kelz"
# author_email = "kelz.codes@gmail.com"
# 
# [tool.briefcase.app.event_manager]
# formal_name = "Event Manager"
# description = "A comprehensive event management system"
# sources = ["frontend/src/Event_Manager"]
# requires = ["toga-winforms~=0.5.0"]